configつかってないので切った。

--- a/todo.jade
+++ b/todo.jade
@@ -1,5 +1,7 @@
 c.dev
   c.tcase
+    t jqueryをローカルのやつ使ってー
+
     t re-file $selector $path
       i select -o jade > $path でもいい、って説はある
     t add-item|add [$selector] $type="t" $content
